# FIS-Display

./: .gitignore  PQ35_46_ACAN_Glossary_DE_EN.md  README.md
firmware/: BOM.md  CMakeLists.txt  README.md  fis_3lb_rx.pio  fis_3lb_tx.pio  fis_bridge.c  fis_can.c  fis_can.h  fis_can_oem.c  fis_can_oem.h  fis_can_rx.c  fis_can_rx.h  fis_config.c  fis_config.h  fis_config_defaults.h  fis_display.c  fis_display.h  fis_nav_icons.h  fis_rx.c  fis_rx.h  local_time.c  local_time.h  nav_state.h  pico_sdk_import.cmake  serial_parser.c  serial_parser.h  tz_lookup.c  tz_lookup.h  tz_table.c  tz_table.h
firmware-display-test/: CMakeLists.txt  README.md  display_test_main.c
nav-icons/: README.md
pcb-files/FIS-display/: FIS-display.csv  FIS-display.kicad_pcb  FIS-display.kicad_prl  FIS-display.kicad_pro  FIS-display.kicad_sch
pcb-files/FIS-display/gerbers/: FIS-display-B_Cu.gbr  FIS-display-B_Mask.gbr  FIS-display-B_Paste.gbr  FIS-display-B_Silkscreen.gbr  FIS-display-Edge_Cuts.gbr  FIS-display-F_Cu.gbr  FIS-display-F_Mask.gbr  FIS-display-F_Paste.gbr  FIS-display-F_Silkscreen.gbr  FIS-display-NPTH.drl  FIS-display-PTH.drl  FIS-display-job.gbrjob
tools/: navit_dbus_to_pico_bridge.py  regenerate_nav_icons.py  svg_to_fis_icon.py
